Playing with starting Player on Specific Device

--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -28,6 +28,11 @@
         <div id="oauth">
         </div>
         <button class="btn btn-default" id="obtain-new-token">Obtain new token using the refresh token</button>
+        <a href="/play-music?refId=playlist:3ZmSpzfclOiwZOJjaBi7TZ" class="btn btn-primary">Play Emotional Vocals</a>
+        <a href="/play-music?refId=playlist:4uf0gphPVNtk4Uu0bxtdGA" class="btn btn-primary">Play Acoustic Covers</a>
+        <a href="/play-music?refId=playlist:37i9dQZF1DX7K31D69s4M1" class="btn btn-primary">Play Piano In The Background</a>
+        <a href="/play-music?refId=album:25L8ck3KGcmCo3901ztPzR" class="btn btn-primary">Play Encanto Soundtrack</a>
+        
       </div>
     </div>
 
